--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,14 +4,14 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/TwinStickExampleMap.TwinStickExampleMap
+EditorStartupMap=/Game/Levels/PlayMap.PlayMap
 LocalMapOptions=
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/TwinStickExampleMap.TwinStickExampleMap
+GameDefaultMap=/Game/Levels/StartMap.StartMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Script/SpaceInvaders.SpaceInvadersGameMode
 GlobalDefaultServerGameMode=None
