--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,10 +38,10 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
-+AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Up,Scale=1.000000)
++AxisMappings=(AxisName="MoveForward",Key=Down,Scale=-1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="FireForward",Key=SpaceBar,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
