--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,19 +3,6 @@
 +DefaultChannelResponses=(Channel=ECC_GameTraceChannel1,Name="Projectile",DefaultResponse=ECR_Block,bTraceType=False,bStaticObject=False)
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/PlayMap.PlayMap
-LocalMapOptions=
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/StartMap.StartMap
-ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/SpaceInvaders.SpaceInvadersGameMode
-GlobalDefaultServerGameMode=None
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TwinStick",NewGameName="/Script/SpaceInvaders")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TwinStick",NewGameName="/Script/SpaceInvaders")
@@ -69,5 +56,19 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Levels/PlayMap.PlayMap
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Levels/StartMap.StartMap
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/Blueprints/SpaceInvadersGameModeBP.SpaceInvadersGameModeBP_C
+GlobalDefaultServerGameMode=None
 
 
