--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,7 +24,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Script/SpaceInvaders.SpaceInvadersGameInstance
 GameDefaultMap=/Game/Levels/StartMap.StartMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/SpaceInvadersGameModeBP.SpaceInvadersGameModeBP_C
@@ -70,5 +70,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
