--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -38,6 +38,8 @@ bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=False
 DefaultViewportMouseLockMode=LockOnCapture
++ActionMappings=(ActionName="PauseGame",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="PauseGame",Key=P,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="MoveRight",Key=Right,Scale=1.000000)
 +AxisMappings=(AxisName="MoveRight",Key=Left,Scale=-1.000000)
 +AxisMappings=(AxisName="FireForward",Key=SpaceBar,Scale=1.000000)
